--- a/src/app/shared/components/generic-form/generic-form.component.html
+++ b/src/app/shared/components/generic-form/generic-form.component.html
@@ -3,8 +3,7 @@
     [label]="'createInsert'"
     [imageSrc]="'/assets/img/icon/createInsert.png'"
     [onClick]="addNewRow"
-    [showButton]="buttonVisibility.showInsert!"
-    [disabled]="!selectedRow">
+    [showButton]="buttonVisibility.showInsert!">
   </app-button>
 
   <app-button
