--- a/src/app/Features/courses/components/courses-page.component.html
+++ b/src/app/Features/courses/components/courses-page.component.html
@@ -101,7 +101,7 @@
                   [dataFactory]="StudentAttendanceDataFactory"
                   [apiPath]="'studentAttendanceClasses'"
                   [searchParameterKey]="'classFk'"
-                  [selectedId]="selectedClass?.classPk"
+                  [selectedId]="selectedClass.classPk"
                   [isEditableTable]="true">
                 </app-generic-table>
           </mat-tab>
