--- a/src/app/shared/components/generic-form/generic-form.component.html
+++ b/src/app/shared/components/generic-form/generic-form.component.html
@@ -141,7 +141,7 @@
         <!-- READ ONLY -->
        
    <ng-template #readOnly>
-  <div class="input-icon-wrapper">
+  <div>
     <!-- date -->
     <ng-container *ngIf="column.dataType === 'date'; else notDate">
       <input
