--- a/src/app/Features/courses/components/courses-page.component.html
+++ b/src/app/Features/courses/components/courses-page.component.html
@@ -75,7 +75,7 @@
 
      
       <br>
-     <app-custom-accordion title="Class.ClassDetails" *ngIf="selectedClass">
+     <app-custom-accordion title="Class.ClassDetails">
       <mat-tab-group mat-stretch-tabs="false">
           <mat-tab label='{{"Class.ClassDetails" | translate}}' >
                  <app-generic-form
@@ -93,15 +93,16 @@
                     (rowDeleted)="onClassRowDeleted($event)">
                  </app-generic-form>
           </mat-tab>
-          <mat-tab label='{{"StudentAttendance.Attendance" | translate}}' >
+          <mat-tab label='{{"StudentAttendance.Attendance" | translate}}'  *ngIf="selectedClass?.classPk">
                 <app-generic-table
+                  #classStudentAttendanceTable
                   [screenId]="'studentAttendance'"
                   [primaryKey]="'studentAttendanceClassPk'"
                   [columns]="studentAttendanceColumns"
                   [dataFactory]="StudentAttendanceDataFactory"
                   [apiPath]="'studentAttendanceClasses'"
                   [searchParameterKey]="'classFk'"
-                  [selectedId]="selectedClass.classPk"
+                  [selectedId]="selectedClass?.classPk"
                   [isEditableTable]="true">
                 </app-generic-table>
           </mat-tab>
